# on-call-agent

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.oncall/: settings.toml
docs/: architecture.md  assistant_grounding_plan.md  claude_code_comparison.md  demo.md  doc_polish_plan.md  doc_polish_report.md  full_system_mastery_guide_en.md  full_system_mastery_guide_plan.md  full_system_mastery_guide_zh.md  interview.md  interview_mastery_guide.md  layered_memory_design.md  operator_shell_plan.md  operator_shell_smoke_checklist.md  phase15_assistant_mapping.md  phase15_assistant_pane_plan.md  phase1_api_mapping.md  phase1_api_plan.md  polish_slice_report.md  product_contract_tighten_plan.md  product_docs_plan.md  product_onepager_readme_plan.md  product_personas_journeys_metrics_plan.md  project_summary.md  readme_polish_plan.md  readme_product_sections_plan.md  repo_presentation_notes.md  resume.md  session_workspace_plan.md  session_workspace_report.md  slide_plan.md  usage.md
docs/examples/: deployment_regression_payload.json
docs/product/: METRICS.md  ONE_PAGER.md  PERSONAS.md  PHASE1_OPERATOR_CONSOLE_PRD.md  POSITIONING.md  PRODUCT_BRIEF.md  PRODUCT_PRINCIPLES.md  ROADMAP.md  USER_JOURNEYS.md
docs/review/: DECISIONS.md  REVIEW_CHECKLIST.md  REVIEW_LOG.md  (+1 more)
question-1/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.en.md  README.md  docker-compose.observability.yml  requirements.txt  ruff.toml
scripts/: test_operator_shell_smoke.sh
slides/: oncall_agent_demo.tex  oncall_agent_demo_notes.md
tests/: __init__.py
(+254 files in other folders)
